# prediction_donnees_immobilieres

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  X_test.parquet  app.py  docker-compose.yml  hello.py  info.txt  pyproject.toml  requirements.txt  settings.py  y_test.parquet  y_train.parquet
.github/workflows/: cd.yml  ci.yml
data/interim/: prepared_dataset.parquet  transactions_post_feature_engineering.parquet
data/raw/: test_file.parquet  test_file.xlsx
mlruns/.trash/790879116595294952/: meta.yaml
mlruns/0/: meta.yaml
mlruns/0/62e86ffd0b45413d82be54e7f037bc5e/: meta.yaml
mlruns/0/de0f57a591ba437eba2e511936febbc4/: meta.yaml
mlruns/119038442520379656/: meta.yaml
mlruns/203965422485053459/: meta.yaml
mlruns/961186934798174615/: meta.yaml
models/: encoders.pickle  model.pkl
notebooks/: EDA.ipynb  best_classification_model_error_analysis.ipynb  best_regression_model_analysis.ipynb  best_regression_model_error_analysis.ipynb  feature_enginering.ipynb  mlflows.ipynb  regression_runs.ipynb
prediction_donnees_immobilieres.git/: config  packed-refs
preprocessing/encoders/: nom_region_encoder.joblib  type_batiment_encoder.joblib
preprocessing/features_used/: features_name.json  numerical_features.json
src/: check_data_drift.py  check_drift.py  check_model_drift.py  evaluate_model.py  feature_engineering.py  load_data.py  makefile  predict.py  preprocessing.py  preprocessing_pipeline.py  split_and_encode.py  test.py  train_and_log_model_with_mlflow.py
src/models/: encoders.joblib
tests/: test_evaluate_model.py  test_feature_engineering.py  test_load_data.py  test_preprocessing.py  test_preprocessing_pipeline.py  test_split_and_encode.py  test_train_and_log_model.py  tests_exemple.py
(+217 files in other folders)
