[project]
name = "prediction-donnees-immobilieres"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastparquet>=2024.11.0",
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "jupyter-core>=5.7.2",
    "matplotlib>=3.10.0",
    "numpy==1.23.5",
    "pandas>=2.2.3",
    "pip>=24.3.1",
    "pyarrow>=4.0.0,<19",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "mlflow==2.19.0",
    "setuptools>=75.8.0",
    "cloudpickle==3.1.1",
    "psutil==6.1.1",
    "scipy==1.15.1",
    "xgboost==2.0.3",
    "imblearn>=0.0",
    "catboost>=1.2.5",
    "shap>=0.46.0",
    "openpyxl>=3.1.5",
    "streamlit>=1.41.1",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "ruff>=0.9.1",
    "pylint>=2.15.0"
]
